<resources>
    <string name="app_name">BM Weather</string>
    <string name="search_button">Suchen</string>
    <string name="searchHint">Suchen</string>
    <string name="messageText">message_Text</string>
    <string name="temp_unit_c">°</string>
    <string name="weather_des">"Wetter: "</string>
    <string name="min_temp">"min: "</string>
    <string name="sorry">Sorry</string>
    <string name="no_internet">Internet is not Available</string>
    <string name="max_temp">"max: "</string>
    <string name="feels_like_temp">"Gefühlt: "</string>
    <string name="comma">" "</string>
    <string name="default_lat">Last Known Latitude: </string>
    <string name="default_lng">Last Known Longitude: </string>
    <string name="empty">" " </string>
    <string name="City">"  %1$s, %2$s "</string>
    <string name="timeF" translatable="false">"  %1$tT "</string>
    <string name="min_max">Min/Max</string>
    <string name="feels_like">Fühlt sich an wie</string>
    <string name="find_me">Koordinationen</string>
    <string name="temp">Temp</string>
    <string name="latit"></string>
    <string name="dsad">sdsda</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forecastFragmentTV">ThisISGoingToBeOurForecastFragment</string>
    <string name="currentWeatherFragmentTV">ThisIsGoingToBeOurcurrentWeatherFragment</string>
    <string name="fragmentSwitchButton">Weather</string>
    <string name="secondActivityTV">"you are in the second activity "</string>
    <string name="mainActivityButton">Zurück</string>
    <string name="kmh">km/std.</string>
    <string name="des_pic">des_pic</string>
    <string name="service_not_available">Dienst ist nicht verfügbar.</string>
    <string name="tvCityPlaceholder" />
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Ihre Unterschrift</string>
    <string name="reply_title">Maßeinheit ändern</string>
    <string name="date_format">Datumsformat ändern</string>
    <!-- Sync Preferences -->
    <string name="sync_title">E-Mail regelmäßig synchronisieren</string>
    <string name="attachment_title">Eingegangene Anhänge herunterladen</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enable_gps">GPS service required</string>
    <string name="required_for_this_app">Please enable GPS service</string>
    <string name="required_internet">Please enable Internet service</string>
    <string name="enable_now">Enable now</string>
    <string name="location_permission_not_granted">Permission has been denied by the user</string>
    <string name="gps_network_not_enabled">GPS Network is not enabled</string>
    <string name="location_services_not_enabled">location services are not enabled</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="Settings">Menu</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
   <string name="no_internet_message_for_message_holder">The BMWeather requires Internet connection to work. Please make sure you’re connected to the internet and come back again.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cityTextView">City</string>
    <string name="nav_menu_title">Search</string>
    <string name="no_forecast_available"> There\'s no forecast data available at the moment</string>
    <string name="invalid_city_name">Ungültiger Stadtname, bitte versuchen Sie es mal mit einem gültigen Namen</string>
    <string name="white_screen_msg">Hoppla! Etwas ist schief gelaufen. Bitte versuchen Sie es noch einmal. Wenn das Problem weiterhin besteht, überprüfen Sie bitte Ihre Eingaben noch einmal oder versuchen Sie es zu einem späteren Zeitpunkt erneut.</string>
    <string name="app_label">app_label</string>
    <string name="search_hint">search_hint</string>
    <string name="clear_search_history">clear search history</string>
    <string name="Clear_Search_History_Dialog_Message">Your search history will be deleted, do you want to continue?</string>
    <string name="Clear_Search_History_Dialog_Title">DELETE SEARCH HISTORY</string>
    <string name="no_permission_no_function">"Leider kann BMWeather App keine Dienste anbieten ohne die erforderlichen Berechtigungen zu haben. Bitte ändern Sie die Berechtigungseinstellungen und kommen Sie wieder zurück. "</string>
</resources>