<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_menu_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        />
    <item
        android:id="@+id/menu_current_location"
        android:icon="@drawable/location"
        app:showAsAction="always"
        android:title="Current_location" />
    <item
        android:id="@+id/settings"
        android:title="@string/Settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_search_hisotry"
        android:title="@string/clear_search_history"
        app:showAsAction="withText" />
</menu>