<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"


                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">


                <Button
                    android:id="@+id/search_button"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:text="@string/searchHint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.936"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.039"
                    tools:text="search" />

                <Button
                    android:id="@+id/location_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/find_me"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <AutoCompleteTextView
                    android:id="@+id/search_input"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:drawableStart="@drawable/ic_baseline_search_24"
                    android:labelFor="@android:id/autofill"
                    android:singleLine="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.063"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.039" />


                <TextView
                    android:id="@+id/mainTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/temp"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="52sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_button"
                    app:layout_constraintVertical_bias="0.236" />

                <TextView
                    android:id="@+id/realTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/feels_like"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_button"
                    app:layout_constraintVertical_bias="0.346" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/City"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_button"
                    app:layout_constraintVertical_bias="0.109" />

                <TextView
                    android:id="@+id/TempAllDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/min_max"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_button"
                    app:layout_constraintVertical_bias="0.444" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/feels_like"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_button"
                    app:layout_constraintVertical_bias="0.524" />


                <TextView
                    android:id="@+id/forecast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/feels_like"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_button"
                    app:layout_constraintVertical_bias="0.624" />

                <ProgressBar
                    android:id="@+id/progress_widget"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="118dp"
                    android:layout_height="86dp"
                    android:progressDrawable="@drawable/gradient"
                    android:visibility="invisible"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/latTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:text="@string/default_lat"
                    android:visibility="invisible"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    app:layout_constraintVertical_bias="0.89" />

                <TextView
                    android:id="@+id/lngTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:text="@string/default_lng"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/latTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    app:layout_constraintVertical_bias="0.92" />


                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/appCompatAutoCompleteTextView"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"

                    android:visibility="invisible"
                    tools:layout_editor_absoluteX="-126dp"
                    tools:layout_editor_absoluteY="0dp"></androidx.appcompat.widget.AppCompatAutoCompleteTextView>

                <Button
                    android:id="@+id/fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/fragmentSwitchButton"
                    app:layout_constraintBottom_toBottomOf="@+id/appCompatAutoCompleteTextView"
                    app:layout_constraintEnd_toEndOf="@+id/appCompatAutoCompleteTextView"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




